--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  easy_localization: ^3.0.8
+  google_fonts: ^7.0.2
+  provider: ^6.1.5+1
+  introduction_screen: ^4.0.0
+  firebase_core: ^4.4.0
+  cloud_firestore: ^6.1.2
+  firebase_auth: ^6.1.4
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +66,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+#     - images/a_dot_burr.jpeg
+    - assets/images/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
